# oidc-jwks-converter

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README_ja.md  about.toml
.claude/: settings.json  settings.local.json
.github/: about.md
.github/workflows/: build.yml  publish_formula.yml
kanban/0001_oidc_jwks_converter/: 0001_oidc_jwks_converter.md  log.md
kanban/0002_write_readme/: 0002_write_readme.md  log.md
kanban/0003_add_english_readme/: 0003_add_english_readme.md  log.md
kanban/0004_update_license_files/: 0004_update_license_files.md  log.md
kanban/0005_add_tests/: 0005_add_tests.md  log.md
kanban/0006_fix_linux_build_failure/: 0006_fix_linux_build_failure.md  log.md
kanban/0007_write_release_notes/: 0007_write_release_notes.md  log.md
kanban/0008_review_changelog/: 0008_review_changelog.md  log.md
kanban/0009_resolve_divergent_branches/: 0009_resolve_divergent_branches.md  log.md
kanban/0010_fix_reqwest_build_issue/: 0010_fix_reqwest_build_issue.md  log.md
kanban/0010_setup_rust_cache/: 0010_setup_rust_cache.md  log.md
kanban/0011_stabilize_build_linux_arm/: 0011_stabilize_build_linux_arm.md  log.md
kanban/0012_enable_cache_build_linux_arm/: 0012_enable_cache_build_linux_arm.md  docker_rust_cache_qa.html  log.md
kanban/0013_fix_cache_build_linux_arm/: 0013_fix_cache_build_linux_arm.md  log.md
kanban/0014_fix_build_linux_arm_error/: 0014_fix_build_linux_arm_error.md  log.md
kanban/0015_design_about/: 0015_design_about.md  log.md
src/: converter.rs  jwks.rs  main.rs
tests/: integration_test.rs
(+23 files in other folders)
