[package]
name = "oidc-jwks-converter"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["sinofseven"]
description = "CLI tool to extract and convert OIDC public keys to PEM certificate format"
repository = "https://github.com/sinofseven/oidc-jwks-converter"
homepage = "https://github.com/sinofseven/oidc-jwks-converter"
documentation = "https://docs.rs/oidc-jwks-converter"
keywords = ["oidc", "jwks", "pem", "cryptography"]
categories = ["command-line-utilities", "authentication"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.0", features = ["full"] }
rsa = "0.9"
p256 = "0.13"
base64 = "0.22"
clap = { version = "4.0", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
